add 10mb link in home

--- a/html/home.html
+++ b/html/home.html
@@ -14,6 +14,7 @@
     <p><a href="/seratuskb">100 KB File</a></p>
     <p><a href="/satumb">1 MB File</a></p>
     <p><a href="/limamb">5 MB File</a></p>
+    <p><a href="/sepuluhmb">10 MB File</a></p>
 
 </body>
 </html>
